# SOZO

./: .gitignore  EXAMPLE.md  LICENSE  MANUAL.md  README.MD  README.md  main.py  pyproject.toml  requirements.txt  setup.py  structure  test.py
.github/workflows/: ci.yml
cli/: app.py  commands.py  utils.py
core/: database.py  events.py  kosmo.py  remindr.py
sozo/: main.py
sozo/cli/: app.py  commands.py  devs.py  utils.py
sozo/core/: ai.py  bridge.py  config.py  database.py  dev_services.py  events.py  kosmo.py  remindr.py  repos.py  runtime.py  scheduler.py  services.py
