[project]
name = "sozo"
version = "1.0.0"
description = "Sōzō — Thought → Structure. A local-first CLI system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "dateparser>=1.1.0",
    "setuptools",
    "groq>=0.4.2",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.8",
    "click>=8.4.2",
]

[project.scripts]
sozo = "sozo.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
